--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,9 @@
     "target": "ESNext",
     "module": "ESNext",
     "moduleDetection": "force",
-    "jsx": "preserve",
-    "jsxFactory": "createElement",
-    "jsxFragmentFactory": "createFragment",
-    "jsxImportSource": "hyper-tsx",
     "allowJs": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "NodeNext",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
     "noEmit": true,
     "skipLibCheck": true,
     "strict": true,
