--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "template",
-  "version": "0.0.0",
-  "author": "",
+  "name": "@hyper-hyper/hyper-server",
+  "version": "0.0.1",
+  "description": "Simple web server to serve static files built with Bun.",
+  "author": "Mikita Stankiewicz <itsmikita@gmail.com>",
   "private": "true",
   "scripts": {
-    "dev": "bun run ./server.ts --hot",
-    "build": "bun build ./server.ts --outdir ./dist"
+    "dev": "bun ./src/server.ts --hot",
+    "build": "bun build ./src/server.ts --outdir ./dist"
   },
   "dependencies": {
-    "bun": "^1.0.22",
-    "bun-types": "^1.0.22"
+    "bun": "^1.0.26",
+    "bun-types": "^1.0.26"
   }
 }
