Added support for server.config.js major improvements to log

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hyper-hyper/hyper-server",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "description": "Simple web server to serve static content built powered by Bun.",
   "author": {
     "name": "Mikita Stankiewicz",
@@ -18,7 +18,7 @@
     "url": "https://github.com/hyper-hyper/hyper-server.git"
   },
   "scripts": {
-    "dev": "bun ./src/server.js --hot --hostname 127.0.0.1 --port 3000 --root ./src",
+    "dev": "bun ./src/server.js --hot --port 9090 --root ./src",
     "build": "bun build ./src/server.js --compile --minify --outfile bin/hyper-server"
   },
   "dependencies": {
