--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hyper-hyper/hyper-server",
-  "version": "0.1.0",
-  "description": "Simple web server to serve static content built powered by Bun.",
+  "version": "0.3.0",
+  "description": "",
   "author": {
     "name": "Mikita Stankiewicz",
     "email": "itsmikita@gmail.com",
@@ -9,7 +9,7 @@
   },
   "private": "true",
   "type": "module",
-  "main": "index.js",
+  "main": "src/server-deno.js",
   "bin": {
     "hyper-server": "./bin/hyper-server"
   },
@@ -18,12 +18,8 @@
     "url": "https://github.com/hyper-hyper/hyper-server.git"
   },
   "scripts": {
-    "dev": "bun ./src/server.js --hot --port 9090 --root ./src",
-    "build": "bun build ./src/server.js --compile --minify --outfile bin/hyper-server"
+    "dev": "./src/server.tsx"
   },
   "dependencies": {
-    "bun": "^1.0.28",
-    "bun-types": "^1.0.28",
-    "commander": "^12.0.0"
   }
 }
