--- a/package.json
+++ b/package.json
@@ -27,8 +27,12 @@
     "@cliffy/ansi": "npm:@jsr/cliffy__ansi@1.0.0-rc.4",
     "@cliffy/command": "npm:@jsr/cliffy__command@1.0.0-rc.4",
     "@std/net": "npm:@jsr/std__net@0.224.1",
-    "@types/bun": "^1.1.3",
-    "bun": "^1.1.10",
-    "deno": "^0.1.1"
+    "@types/bun": "^1.1.11",
+    "bonjour-service": "^1.2.1",
+    "bun": "^1.1.30",
+    "deno": "^0.1.1",
+    "dgram": "^1.0.1",
+    "pkgroll": "^2.5.0",
+    "tsx": "^4.19.1"
   }
 }
