--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bun": "^1.1.30",
     "deno": "^0.1.1",
     "dgram": "^1.0.1",
+    "node": "^22.11.0",
     "pkgroll": "^2.5.0",
     "tsx": "^4.19.1"
   }
